--- a/trigger.yaml
+++ b/trigger.yaml
@@ -5,7 +5,7 @@ steps:
     args:
       - '-c'
       - |
-        gcloud compute ssh --zone "us-central1-c" "demo1" --project "global-grammar-426419-v9"<< EOF
+        gcloud compute ssh --zone "us-central1-c" "root@demo1" --project "global-grammar-426419-v9"<< EOF
           sudo su -
           echo "Updating package list and installing Nginx"
           sudo apt-get update
