--- a/trigger.yaml
+++ b/trigger.yaml
@@ -5,7 +5,7 @@ steps:
     args:
       - '-c'
       - |
-        gcloud compute ssh --zone "us-central1-c" "root@demo1" --project "global-grammar-426419-v9"<< EOF
+        gcloud compute ssh --zone "us-central1-c" "demo1" --project "global-grammar-426419-v9"<< EOF
           sudo su -
           echo "Updating package list and installing Nginx"
           sudo apt-get update
@@ -17,7 +17,7 @@ steps:
     args:
       - '-c'
       - |
-        gcloud compute ssh --zone "us-central1-c" "root@demo1" --project "global-grammar-426419-v9"<< EOF
+        gcloud compute ssh --zone "us-central1-c" "demo1" --project "global-grammar-426419-v9"<< EOF
           sudo su -
           echo "Cloning the repository"
           git clone https://github.com/VenkateshVakati/Akeshya.git /var/www
@@ -29,7 +29,7 @@ steps:
     args:
       - '-c'
       - |
-        gcloud compute ssh --zone "us-central1-c" "root@demo1" --project "global-grammar-426419-v9"<< EOF
+        gcloud compute ssh --zone "us-central1-c" "demo1" --project "global-grammar-426419-v9"<< EOF
           sudo su -
           sudo apt-get install -y npm
           cd /var/www/Akeshya
@@ -42,7 +42,7 @@ steps:
     args:
       - '-c'
       - |
-        gcloud compute ssh --zone "us-central1-c" "root@demo1" --project "global-grammar-426419-v9"<< EOF
+        gcloud compute ssh --zone "us-central1-c" "demo1" --project "global-grammar-426419-v9"<< EOF
           sudo su -
           cd /etc/nginx/sites-enabled
           echo "server {
